added more unit tests and code refactoring for questionbank.